fixed testimonials overflow issue

--- a/css/style.less
+++ b/css/style.less
@@ -265,7 +265,7 @@ section.testimonials {
     background-color: #fff;
     min-height: 400px;
     height: auto;
-    padding: 100px 0;
+    padding: 120px 0;
     h1, h2, blockquote {
         font-family: "Lato", sans-serif;
         color: #56584B;
@@ -289,7 +289,7 @@ section.testimonials h2 {
     font-weight: 400;
 }
 section.testimonials blockquote {
-    font-size: 45px;
+    font-size: 30px;
     line-height: 22px;
     font-weight: 300;
     font-style: italic;
@@ -320,15 +320,6 @@ section.testimonials #testimonial-slides li {
 section.testimonials #testimonial-slides li:last-child {
     display: block;
 }
-
-// @media (max-width: 480px) {
-//     section.testimonials blockquote {
-//         font-size: 30px !important;
-//     }
-//     section.testimonials #testimonial-slides {
-//         min-height: 0;
-//     }
-// }
 
 
 /*------------------------- Shoutout -------------------------*/
@@ -473,10 +464,6 @@ footer.layout-footer {
     section.testimonials p {
         margin: 10px 5% 0 5%;
     }
-
-    section.testimonials #testimonial-slides {
-        min-height: 400px;
-    }
 }
 
 @media (min-width: 768px ) and (max-width: 992px) {
@@ -493,7 +480,7 @@ footer.layout-footer {
     }
 
     section.testimonials blockquote {
-        font-size: 40px;
+        font-size: 30px;
     }
 }
 
